install readline-sync

--- a/package.json
+++ b/package.json
@@ -1,26 +1,1 @@
-{ 
- "name": "@hexlet/code",
-  "version": "1.0.0",
-  "type":"module",
-  "bin": {
-    "brain-games": "bin/brain-games.js"
-  },
-  "description": "[![Actions Status](https://github.com/ArtemBY/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/ArtemBY/frontend-project-44/actions)",
-  "main": "brain-games.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ArtemBY/frontend-project-44.git"
-  },
-  "author": {
-   "name": "artem moiseyenko",
-   "email": "a.moiseyenko95@gmail.com"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ArtemBY/frontend-project-44/issues"
-  },
-  "homepage": "https://github.com/ArtemBY/frontend-project-44#readme"
-}
+{"name":"@hexlet/code","version":"1.0.0","type":"module","bin":{"brain-games":"bin/brain-games.js"},"description":"[![Actions Status](https://github.com/ArtemBY/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/ArtemBY/frontend-project-44/actions)","main":"brain-games.js","scripts":{"test":"echo \"Error: no test specified\" && exit 1"},"repository":{"type":"git","url":"git+https://github.com/ArtemBY/frontend-project-44.git"},"author":{"name":"artem moiseyenko","email":"a.moiseyenko95@gmail.com"},"license":"ISC","bugs":{"url":"https://github.com/ArtemBY/frontend-project-44/issues"},"homepage":"https://github.com/ArtemBY/frontend-project-44#readme","dependencies":{"readline-sync":"^1.4.10"}}
